remove reference to case from codebase
