# info-and-advice-datastore-service/src/main/java/uk/gov/justice/laa/ia/datastore/controller/ApplicationController.java
@@ -16,7 +16,7 @@ import uk.gov.justice.laa.ia.datastore.model.ApplicationResponse;
 import uk.gov.justice.laa.ia.datastore.model.ApplicationResponses;
 import uk.gov.justice.laa.ia.datastore.model.ApplicationSummary;
 import uk.gov.justice.laa.ia.datastore.model.DeclarationCommand;
-import uk.gov.justice.laa.ia.datastore.model.StartCaseCommand;
+import uk.gov.justice.laa.ia.datastore.model.StartApplicationCommand;
 import uk.gov.justice.laa.ia.datastore.service.ApplicationService;
 import uk.gov.justice.laa.ia.datastore.specification.ApplicationSpecification;
 
@@ -29,8 +29,9 @@ public class ApplicationController implements ApplicationApi {
   private final ApplicationService service;
 
   @Override
-  public ResponseEntity<Void> startCase(@Valid StartCaseCommand startCaseCommand) {
-    UUID id = service.createApplication(startCaseCommand);
+  public ResponseEntity<Void> startApplication(
+      @Valid StartApplicationCommand startApplicationCommand) {
+    UUID id = service.createApplication(startApplicationCommand);
 
     return ResponseEntity.status(HttpStatus.CREATED)
         .header("X-Application-ID", id.toString())
